--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <ul class="social-icon">
                             <li><span>Meet me on:</span></li>
                             <li><a href="https://www.facebook.com/aaron.gillies.5" target="_" i class="fab fa-facebook-square"></i></a></li>
-                            <li><a href="#" i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://twitter.com/UpstateCoder91" target="_" i class="fab fa-twitter"></i></a></li>
                             <li><a href="#" i class="fab fa-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -241,11 +241,11 @@
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 4">
+                           <img src="images/1lineadayapp.PNG" class="img-responsive" alt="1Lineadayapp">
                                 <div class="portfolio-overlay">
-                                    <h4>Project Four</h4>
-                                    <p></p>
-                                    <a href="#" class="btn btn-default">DETAIL</a>
+                                    <h4>One line a day Build project</h4>
+                                    <p>Had the privilege of working on the UI for One Line A Day with great team of developers, which is a note taking application built using JavaScript/React for the front end, and NodeJS for the backend.</p>
+                                    <a href="https://github.com/Build-Week-OneLineADay" target="_" class="btn btn-default">DETAIL</a>
                                 </div>
                         </div>
                     </div>
@@ -326,7 +326,7 @@
     					<ul class="social-icon">
     						<li><h4>CONNECT WITH ME</h4></li>
     						<li><a href="https://www.facebook.com/aaron.gillies.5" target="_" i class="fab fa-facebook-square"></i></a></li>
-    						<li><a href="#" i class="fab fa-twitter"></i></a></li>
+    						<li><a href="https://twitter.com/UpstateCoder91" target="_" i class="fab fa-twitter"></i></a></li>
     						<li><a href="#" i class="fab fa-linkedin"></i></a></li>
     					</ul>
     				</div>
